--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,59 @@
 {
-  "extends": ["next/core-web-vitals"],
-  "ignorePatterns": ["dist", ".eslintrc.cjs", "node_modules", "*.css"]
+  "extends": [
+    "next/core-web-vitals",
+    "prettier",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:import/recommended"
+  ],
+  "ignorePatterns": [
+    "dist",
+    ".eslintrc.json",
+    "node_modules",
+    "*.css",
+    "public/locales"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["react", "unused-imports", "import"],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "import/no-unresolved": "error",
+    "react/prop-types": "off",
+    "react/jsx-curly-brace-presence": "error",
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-unused-expressions": "off"
+  },
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": ["./tsconfig.json"],
+    "tsconfigRootDir": ".",
+    "extraFileExtensions": [".json", ".css"]
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "./tsconfig.json"
+      }
+    },
+    "react": {
+      "version": "detect"
+    }
+  }
 }
